--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
         <h1>git Project 예제</h1>
         <h1>develop branch에서 추가한 내용</h1>
         <h1>pro branch에서 추가한 내용</h1>
+        <h1>main branch protection 설정</h1>
     </body>
 </html>
