--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
         <h1>pro branch에서 추가한 내용</h1>
         <h1>main branch protection 설정</h1>
         <h1>main branch에서 main으로 pushh</h1>
+
+        <h1>pro가 추가한 내용</h1>
     </body>
 </html>
